fix for slide image being cut off. needs testing.

--- a/data/css/slides-style.css
+++ b/data/css/slides-style.css
@@ -1,82 +1,3 @@
-#page{
-    overflow: hidden;
-}
-
-.cb-slideshow,
-.cb-slideshow:after {
-    position: fixed;
-    width: 100%;
-    height: 100%;
-    top: 0px;
-    left: 0px;
-    z-index: 0;
-}
-
-.cb-slideshow li span {
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 0px;
-    left: 0px;
-    color: transparent;
-    background-size: cover;
-    background-position: 50% 50%;
-    background-repeat: none;
-    opacity: 0;
-    z-index: 0;
-    -webkit-backface-visibility: hidden;
-    -webkit-animation: imageAnimation 36s linear infinite 0s;
-    -moz-animation: imageAnimation 36s linear infinite 0s;
-    -o-animation: imageAnimation 36s linear infinite 0s;
-    -ms-animation: imageAnimation 36s linear infinite 0s;
-    animation: imageAnimation 36s linear infinite 0s;
-}
-
-
-.cb-slideshow li:nth-child(1) span {
-    background-image: url(../images/slides/1.png)
-}
-.cb-slideshow li:nth-child(2) span {
-    background-image: url(../images/slides/2.png);
-    -webkit-animation-delay: 12s;
-    -moz-animation-delay: 12s;
-    -o-animation-delay: 12s;
-    -ms-animation-delay: 12s;
-    animation-delay: 12s;
-}
-.cb-slideshow li:nth-child(3) span {
-    background-image: url(../images/slides/3.png);
-    -webkit-animation-delay: 24s;
-    -moz-animation-delay: 24s;
-    -o-animation-delay: 24s;
-    -ms-animation-delay: 24s;
-    animation-delay: 24s;
-}
-
-/* Animation for the slideshow images */
-@-webkit-keyframes imageAnimation {
-    0% { opacity: 0;
-    -webkit-animation-timing-function: ease-in; }
-    2% { opacity: 1;
-         -webkit-animation-timing-function: ease-out; }
-    30% { opacity: 1 }
-    34% { opacity: 0 }
-    100% { opacity: 0 }
-}
-
-@keyframes imageAnimation {
-    0% { opacity: 0;
-    animation-timing-function: ease-in; }
-    2% { opacity: 1;
-         animation-timing-function: ease-out; }
-    30% { opacity: 1 }
-    34% { opacity: 0 }
-    100% { opacity: 0 }
-}
-
-
-
-
 /* CSS reset */
 body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,form,fieldset,input,textarea,p,blockquote,th,td {
     margin:0;
@@ -120,3 +41,88 @@ a{
     color: #333;
     text-decoration: none;
 }
+
+
+#page{
+    overflow: hidden;
+}
+
+.cb-slideshow,
+.cb-slideshow:after {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    min-height: 334px;
+    top: 0px;
+    left: 0px;
+    z-index: 0;
+}
+
+.cb-slideshow li span {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    color: transparent;
+    background-size: cover;
+    background-position: 50% 50%;
+    background-repeat: no-repeat;
+    opacity: 0;
+    z-index: 0;
+    -webkit-backface-visibility: hidden;
+    -webkit-animation: imageAnimation 36s linear infinite 0s;
+    -moz-animation: imageAnimation 36s linear infinite 0s;
+    -o-animation: imageAnimation 36s linear infinite 0s;
+    -ms-animation: imageAnimation 36s linear infinite 0s;
+    animation: imageAnimation 36s linear infinite 0s;
+}
+
+
+.cb-slideshow li:nth-child(1) span {
+    background-image: url(../images/slides/1.png)
+    background-size: cover;
+}
+.cb-slideshow li:nth-child(2) span {
+    background-image: url(../images/slides/2.png);
+    background-size: cover;
+    -webkit-animation-delay: 12s;
+    -moz-animation-delay: 12s;
+    -o-animation-delay: 12s;
+    -ms-animation-delay: 12s;
+    animation-delay: 12s;
+}
+.cb-slideshow li:nth-child(3) span {
+    background-image: url(../images/slides/3.png);
+    background-size: cover;
+    -webkit-animation-delay: 24s;
+    -moz-animation-delay: 24s;
+    -o-animation-delay: 24s;
+    -ms-animation-delay: 24s;
+    animation-delay: 24s;
+}
+
+/* Animation for the slideshow images */
+@-webkit-keyframes imageAnimation {
+    0% { opacity: 0;
+    -webkit-animation-timing-function: ease-in; }
+    2% { opacity: 1;
+         -webkit-animation-timing-function: ease-out; }
+    30% { opacity: 1 }
+    34% { opacity: 0 }
+    100% { opacity: 0 }
+}
+
+@keyframes imageAnimation {
+    0% { opacity: 0;
+    animation-timing-function: ease-in; }
+    2% { opacity: 1;
+         animation-timing-function: ease-out; }
+    30% { opacity: 1 }
+    34% { opacity: 0 }
+    100% { opacity: 0 }
+}
+
+
+
+
